k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: cpprev
spec:
  selector:
    app: web
  ports:
    - port: 8090
      targetPort: 8090
  type: ClusterIP
